# generative-story-pipeline

./: .gitignore  Dockerfile  README .md  README.md  docker-compose.yml
opensora/: Dockerfile  pyproject.toml
opensora/configs/diffusion/inference/: 256px.py  high_compression.py
opensora/configs/diffusion/inference/plugins/: t2i2v.py
opensora/configs/vae/inference/: hunyuanvideo_vae.py  video_dc_ae.py
opensora/notebooks/: opensora.ipynb
opensora/notebooks/samples/: prompt.csv
opensora/opensora/: setup.py
opensora/opensora.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
opensora/opensora/acceleration/: checkpoint.py  communications.py
opensora/opensora/acceleration/shardformer/policy/: t5_encoder.py
opensora/opensora/datasets/: __init__.py  aspect.py  bucket.py  dataloader.py  dataset.py  datasets.py  sampler.py  utils.py
opensora/opensora/models/: __init__.py
opensora/opensora/models/dc_ae/: __init__.py  ae_model_zoo.py
opensora/opensora/models/dc_ae/models/: __init__.py  dc_ae.py
opensora/opensora/models/dc_ae/utils/: __init__.py  init.py
opensora/opensora/models/hunyuan_vae/: __init__.py  autoencoder_kl_causal_3d.py  distributed.py  policy.py  unet_causal_3d_blocks.py  vae.py
opensora/opensora/models/mmdit/: __init__.py  distributed.py  math.py
opensora/opensora/models/text/: __init__.py  conditioner.py
opensora/opensora/models/vae/: __init__.py  autoencoder_2d.py  discriminator.py  losses.py  lpips.py  tensor_parallel.py  utils.py
opensora/opensora/utils/: cai.py  ckpt.py  config.py  inference.py  misc.py  sampling.py  train.py
(+19 files in other folders)
