[project]
name = "opensora"
version = "0.1.0"
description = "Module which provides logic to train various models with data in the chosen infrastructure"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch==2.4.0",
  "xformers",
  "triton",
  "diffusers",
  "torchvision==0.19.0",
  "colossalai>=0.4.4",
  "mmengine>=0.10.3",
  "ftfy>=6.2.0", # for t5
  "accelerate>=0.29.2", # for t5
  "av==13.1.0", # for video loading
  "liger-kernel==0.5.2",
  "pandas>=2.0.3",
  "pandarallel>=1.6.5",
  "openai>=1.52.2",
  "wandb>=0.17.0",
  "tensorboard>=2.14.0",
  "pre-commit>=3.5.0",
  "omegaconf>=2.3.0",
  "pyarrow",
  "jupyter>=1.1.1",
  "ipykernel>=6.30.0",
  "opencv-python-headless>=4.12.0.88",
]


[project.optional-dependencies]
dev = ["ipykernel"]


[tool.pyproject2conda.dependencies]
colossalai = { pip = true }
liger-kernel = { pip = true }
opencv-python-headless = { pip = true }
torch = { pip = true }


[tool.uv.sources]
torch = [
  { index = "pytorch-cu121"}
]
torchvision = [
  { index = "pytorch-cu121"}
]
xformers = [
  { index = "pytorch-cu121"}
]
colossalai = [
  { index = "pytorch-cu121"}
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["opensora"]
